# Planary

./: .gitignore  CHART_LIBRARY_GUIDE.md  COMPLETE_SYSTEM_GUIDE.md  NOTIFICATION_GUIDE.md  README.md  SYSTEM_DOCUMENTATION.md  SYSTEM_OVERVIEW.md  TRENDS_CALCULATION.md  TRENDS_SUMMARY.md
backend/: .env  CLASS_DIAGRAM.md  README_BACKEND.md  allow_firewall.ps1  main.py  pyproject.toml  requirements.txt  run_backend.ps1  token.txt
backend/core/: config.py  security.py
backend/db/: session.py
backend/migrations/: 001_add_mood_score_tags.sql  002_add_3score_system.sql  003_add_notification_fields.sql  004_add_notification_id.sql  005_add_routine_remind_sound.sql  006_add_routine_notification_id.sql
backend/models/: activity.py  diary.py  routine_activity.py  user.py
backend/routers/: activities.py  diary.py  home.py  login.py  profile.py  register.py  routine_activities.py  token.py  trends.py
backend/schemas/: activities.py  diary.py  home.py  login.py  profile.py  register.py  routine_activity.py
backend/scripts/: add_routine_columns.py  delete_user_activities_and_routines.py
frontend/: App.js  app.json  eas.json  metro.config.js  package-lock.json  package.json
frontend/android/: settings.gradle
frontend/android/app/: build.gradle
frontend/scripts/: test_fields.js
frontend/src/: activities.js  api.js  apiClient.js  auth.js  autoDiaryService.js  diary.js  moodSystem.js  routines.js  summarizeActivities.js
frontend/src/api/: activities.js  auth.js  client.js  diary.js  index.js  routines.js  trends.js
frontend/src/components/: DateTimeInput.js  (+5 more)
(+33 files in other folders)
